# sift

./: README.md
.github/workflows/: ci.yml
sift/: Cargo.toml  README.md
sift/crates/bench/: Cargo.toml
sift/crates/bench/benches/: aggregate.rs  parse.rs  pipeline.rs
sift/crates/cli/: Cargo.toml
sift/crates/cli/src/: args.rs  config.rs  main.rs
sift/crates/cli/src/commands/: analyze.rs  mod.rs  stats.rs  tail.rs
sift/crates/cli/tests/: integration.rs
sift/crates/core/: Cargo.toml
sift/crates/core/src/: aggregate.rs  engine.rs  error.rs  filter.rs  lib.rs  stream.rs  types.rs
sift/crates/formats/: Cargo.toml
sift/crates/formats/src/: common.rs  json.rs  lib.rs  nginx.rs  plain.rs
sift/crates/output/: Cargo.toml
sift/crates/output/src/: json.rs  lib.rs  stdout.rs  table.rs
sift/docs/: architecture.md  usage.md
sift/examples/: app.json  demo.sh
sift/scripts/: bench.sh  build.sh  demo.sh  install.sh  release.sh
sift/tests/: intgration.rs
