[package]
name = "sift-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5"
sift-core = { path = "../core" }
sift-formats = { path = "../formats" }

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "aggregate"
harness = false
